Updated logsitic regression with rfe

--- a/ML-Models-Mathematics-Python-Implementation/Logistic-Regression/Logistic-Regression-Model-from-scratch/Logistic-Regression-using-Gradient-Descent-Newton-Method.ipynb
+++ b/ML-Models-Mathematics-Python-Implementation/Logistic-Regression/Logistic-Regression-Model-from-scratch/Logistic-Regression-using-Gradient-Descent-Newton-Method.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`Logistic Regression` is a `Machine Learning classification algorithm` that is used to predict the `probability of a categorical dependent variable`. In logistic regression, the dependent variable is a binary variable that contains data coded as 1 (yes, success, etc.) or 0 (no, failure, etc.). In other words, the logistic regression model predicts P(Y=1) as a function of X."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this Jupyter notebook, we implement `Logistic Regression model from scratch in Python` using the following optimization methods.\n",
     "\n",
     "1. Gradient Descent\n",
