--- a/Applied-ML-Models/HR-Analytics/HR-Analytics-Predicting Employee Turnover.ipynb
+++ b/Applied-ML-Models/HR-Analytics/HR-Analytics-Predicting Employee Turnover.ipynb
@@ -393,8 +393,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# profile = ProfileReport(df, title=\"Pandas Profiling Report\", explorative=True)\n",
-    "# profile.to_notebook_iframe()"
+    "profile = ProfileReport(df, title=\"Pandas Profiling Report\", explorative=True)\n",
+    "profile.to_notebook_iframe()"
    ]
   },
   {
@@ -3096,13 +3096,6 @@
    "source": [
     "## End of notebook"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
